--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "BetterTabs",
   "description": "BetterTabs organizes tabs for you",
-  "version": "1.2",
+  "version": "1.3.4",
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html",
     "default_icon": "logo.png"
-  }
+  },
+  "permissions": ["tabs", "scripting"],
+  "host_permissions": ["<all_urls>"]
 }
